--- a/src/index.css
+++ b/src/index.css
@@ -2,3 +2,9 @@
 @import "tailwindcss/base";
 @import "tailwindcss/components";
 @import "tailwindcss/utilities";
+
+@layer base {
+    :root {
+        background-color: #B9D9EB;
+    }
+}
